cmake_minimum_required(VERSION 2.8)
project(TCV CXX)

file(GLOB_RECURSE hdr "include/*.hpp")
file(GLOB_RECURSE src "src/*.cpp")
include_directories("${CMAKE_CURRENT_LIST_DIR}/include")
list(APPEND CMAKE_CXX_FLAGS "-std=c++11")
find_package(CUDA REQUIRED)
  include_directories(${CUDA_INCLUDE_DIRS})

FIND_PACKAGE(OpenCV REQUIRED core cudaarithm)
  INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
  
ADD_DEFINITIONS(-D_CRTDBG_MAP_ALLOC)
ADD_SUBDIRECTORY("external/yar")
include_directories("external/yar/include")

cuda_add_library(TCV ${hdr} ${src})
target_link_libraries(TCV ${CUDA_CUDART_LIBRARY} yar)


MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

FIND_PACKAGE(Boost QUIET COMPONENTS unit_test_framework)
IF(Boost_UNIT_TEST_FRAMEWORK_FOUND)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIR_DEBUG})
SUBDIRLIST(tests "${CMAKE_CURRENT_LIST_DIR}/tests")
foreach(test ${tests})
  file(GLOB_RECURSE test_srcs "tests/${test}/*.cpp")
  add_executable(${test} ${test_srcs})
  add_dependencies(${test} TCV)
  target_link_libraries(${test} TCV ${Boost_LIBRARIES} yar ${OpenCV_LIBS})
  set_target_properties(${test} PROPERTIES FOLDER Tests/TCV)
endforeach()
ENDIF()